<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bulls&amp;Cows</string>
    <string name="action_settings">Settings</string>
    <string name="start_game">Make a 4-digit number with non-repeating digits and click on the button &quot;Start Game&quot;.</string>
    <string name="bulls">Bulls</string>
    <string name="cows">Cows</string>
    <string name="answer">Answer</string>
    <string name="answer_message">How many bulls and cows for the number of</string>
    <string name="number">Number</string>
    <string name="button_start_game">Start game</string>
    <string name="button_answer">To answer</string>
    <string name="button_start_again">Start again</string>
    <string name="done">Guessed!!! Your number is:</string>

</resources>