<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game" />

    <Button
        android:id="@+id/button_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="@dimen/side_common_margin"
        android:layout_marginRight="@dimen/side_common_margin"
        android:layout_marginTop="@dimen/top_common_margin"
        android:onClick="buttonGameOnClick"
        android:text="@string/button_start_game" />

    <TableLayout
        android:id="@+id/TableLayoutResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:onClick="resultOnClick" >

        <TableRow
            android:id="@+id/tableRowTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/table_common_margin"
            android:layout_marginRight="@dimen/table_common_margin"
            android:layout_marginTop="@dimen/top_common_margin" >

            <TextView
                android:id="@+id/textViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/number" />

            <android.support.v7.widget.Space
                android:id="@+id/spaceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewBull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/bulls" />

            <android.support.v7.widget.Space
                android:id="@+id/spaceTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewCow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/cows" />

        </TableRow>
    </TableLayout>

</LinearLayout>